--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div class="container">
       <form id="energy_counter_Form">
         <input id="total_energy" style="display: none" />
-        <h1 id="count">3/10</h1>
+        <div class="count-container">
+          <h1 id="count">3/10</h1>
+        </div>
         <div>
           <div>
             <button id="add_energy">+ Energy</button>
