added End Round

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <button id="add_energy">+ Energy</button>
             <button id="remove_energy">- Energy</button>
           </div>
-          <button id="skip">Skip</button>
+          <button id="skip">Skip(Didn't Use Energy)/End Round</button>
           <button id="reset">Reset</button>
         </div>
       </form>
