new commit to dev

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <div class="container">
       <form id="energy_counter_Form">
+        <h3>Energy Counter For Enemys</h3>
         <input id="total_energy" style="display: none" />
         <div class="count-container">
           <h1 id="count">3/10</h1>
@@ -20,7 +21,7 @@
             <button id="add_energy">+ Energy</button>
             <button id="remove_energy">- Energy</button>
           </div>
-          <button id="skip">Skip(Didn't Use Energy)/End Round</button>
+          <button id="skip">Skip(Didn't Use Energy) / End Round</button>
           <button id="reset">Reset</button>
         </div>
       </form>
