--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <form id="energy_counter_Form">
-        <h3>Energy Counter For Enemys</h3>
+        <h3>Energy Counter For Enemies</h3>
         <input id="total_energy" style="display: none" />
         <div class="count-container">
           <h1 id="count">3/10</h1>
